--- a/app/src/main/res/drawable/ic_cat_drinks.xml
+++ b/app/src/main/res/drawable/ic_cat_drinks.xml
@@ -1,4 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+    <path
+        android:fillColor="#03A9F4"
+        android:pathData="M21,5H3v2l8,9v5H6v2h12v-2h-5v-5l8,-9V5zM7.43,7h9.14l-4.57,5.36L7.43,7z"/>
+</vector>
