--- a/app/src/main/res/drawable/ic_cat_oil_ghee.xml
+++ b/app/src/main/res/drawable/ic_cat_oil_ghee.xml
@@ -1,4 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+    <path
+        android:fillColor="#FFC107"
+        android:pathData="M16,5H8C6.9,5 6,5.9 6,7v10c0,1.1 0.9,2 2,2h8c1.1,0 2,-0.9 2,-2V7C18,5.9 17.1,5 16,5zM14,15h-4v-1h4V15zM16,12H8V7h8V12z"/>
+</vector>
