--- a/app/src/main/res/drawable/ic_cat_veg_fruits.xml
+++ b/app/src/main/res/drawable/ic_cat_veg_fruits.xml
@@ -1,3 +1,9 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="24dp" android:viewportHeight="24" android:viewportWidth="24" android:width="24dp">
-    <path android:fillColor="#4CAF50" android:pathData="M17,5H7C5.9,5 5,5.9 5,7v10c0,1.1 0.9,2 2,2h10c1.1,0 2,-0.9 2,-2V7C19,5.9 18.1,5 17,5zM12,7c1.66,0 3,1.34 3,3s-1.34,3 -3,3 -3,-1.34 -3,-3 1.34,-3 3,-3zM16,17H8v-1c0,-1.33 2.67,-2 4,-2s4,0.67 4,2V17z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+    <path
+        android:fillColor="#4CAF50"
+        android:pathData="M17,5H7C5.9,5 5,5.9 5,7v10c0,1.1 0.9,2 2,2h10c1.1,0 2,-0.9 2,-2V7C19,5.9 18.1,5 17,5zM12,7c1.66,0 3,1.34 3,3s-1.34,3 -3,3 -3,-1.34 -3,-3 1.34,-3 3,-3zM16,17H8v-1c0,-1.33 2.67,-2 4,-2s4,0.67 4,2V17z"/>
 </vector>
