--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -23,8 +23,8 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="16dp"
-                android:background="@color/white">
+                android:background="@color/white"
+                android:padding="16dp">
 
                 <TextView
                     android:id="@+id/delivery_time"
@@ -32,27 +32,27 @@
                     android:layout_height="wrap_content"
                     android:text="@string/home_delivery_time"
                     android:textColor="@color/black"
-                    android:textStyle="bold"
-                    android:textSize="18sp"/>
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/user_location"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/home_user_location"
-                    app:drawableEndCompat="@drawable/ic_arrow_down"
-                    android:drawablePadding="4dp"
                     android:layout_below="@id/delivery_time"
-                    android:textColor="#555555"/>
+                    android:drawablePadding="4dp"
+                    android:text="@string/home_user_location"
+                    android:textColor="#555555"
+                    app:drawableEndCompat="@drawable/ic_arrow_down" />
 
                 <ImageView
                     android:id="@+id/user_profile_icon"
                     android:layout_width="32dp"
                     android:layout_height="32dp"
-                    android:src="@drawable/ic_profile"
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
-                    android:contentDescription="@string/profile_title"/>
+                    android:contentDescription="@string/profile_title"
+                    android:src="@drawable/ic_profile" />
             </RelativeLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -88,7 +88,7 @@
             android:layout_height="150dp"
             android:layout_marginTop="16dp"
             android:paddingStart="16dp"
-            android:paddingEnd="16dp"/>
+            android:paddingEnd="16dp" />
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/category_tabs"
@@ -110,8 +110,10 @@
         android:layout_height="match_parent"
         android:padding="8dp"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:spanCount="2"
+        app:layout_anchor="@+id/product_recycler_view"
+        app:layout_anchorGravity="center"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        app:spanCount="2"
         tools:listitem="@layout/list_item_product" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
